--- a/build.gradle
+++ b/build.gradle
@@ -92,3 +92,66 @@ task hello ("description": "Hello task", "group" : "xcoder") {
 }
 
 //gradle.taskGraph.allTasks
+
+task first {
+    doLast {
+        println "Task 1"
+    }
+}
+
+task second {
+    doLast {
+        println "Task 2"
+    }
+}
+
+
+task third {
+    doLast {
+        println "Task 3"
+    }
+}
+
+task fourth(group: "xcoder") {
+//    dependsOn()
+    
+    doLast {
+        println "Task 4"
+    }
+}
+
+// 2 <--- 4
+// fourth.dependsOn second
+// second.dependsOn first // այսինքն մինչև second task-ի կատարվելը պետք է կատարվի first task-ը
+// second.finalizedBy third // այսինքն մինչև third task-ի կատարվելը պետք է կատարվի second task-ը
+
+// task-երի կատարման հաջորդականություն է, այլ ոչ թե կախվածություն է
+fourth.dependsOn first
+fourth.dependsOn second
+fourth.dependsOn third
+
+first.mustRunAfter second
+//second.shouldRunAfter first
+
+// whenReady is callback method
+gradle.taskGraph.whenReady {TaskExecutionGraph graph ->
+    println "--- Graph:"
+
+    graph.allTasks.each {
+        println "${it.name}"
+    }
+}
+
+gradle.taskGraph.beforeTask {Task task ->
+    if(task.group == 'xcoder') {
+        println "beforeTask callBack $task"
+    }
+}
+
+gradle.taskGraph.afterTask {Task task ->
+    if(task.name == 'first') {
+        println "afterTask callBack $task"
+    }
+}
+
+defaultTasks "second"
